--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
   </div>
 </div>
 <script>
-  var player = new VideoPlayer({
+  var player = new VideoPlayer.Player({
     width: 760,
     height: 427,
     autoplay: false,
