--- a/src/index.html
+++ b/src/index.html
@@ -34,12 +34,15 @@
     preload: 'auto',
     volume: 0.5,
     size: {
-      width: 750,
-      height: 750
+      width: 760,
+      height: 428
     },
     src: [
       'https://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4',
-    ]
+    ],
+    overlay: {
+      poster: 'https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hubble_Peers_into_the_Storm_%2829563971405%29.jpg/1024px-Hubble_Peers_into_the_Storm_%2829563971405%29.jpg'
+    }
   });
   document.getElementById('player').appendChild(player.node);
 </script>
