--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,9 @@
     src: [
       'https://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4'
     ],
-    overlay: {
-      poster: 'https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hubble_Peers_into_the_Storm_%2829563971405%29.jpg/1024px-Hubble_Peers_into_the_Storm_%2829563971405%29.jpg'
+    overlay: false,
+    screen: {
+      indicateScreenClick: true
     }
   });
   document.getElementById('player').appendChild(player.node);
