Various fixes for styles

--- a/src/index.html
+++ b/src/index.html
@@ -38,9 +38,12 @@
       height: 428
     },
     src: [
-      'https://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4'
+      {
+        url: 'https://vod-meta.wix.com/secure-files/eee8630aa5274e66813172fbeb2a742c?secure_data=c2F2ZV9hc19uYW1lPVdhbmRlcmx1c3Qmbm9uY2U9NDkxNzZiZjNhNGY1JmV4cGlyYXRpb25fdHM9MTQ5NzcyMzkzNSZmaWxlX3VybD0vYWVjYTA2MmMtZjUzNC00OTFmLWJjN2QtNTRmZjNlNWE5ZDE4L3ZpZGVvL2VlZTg2MzBhYTUyNzRlNjY4MTMxNzJmYmViMmE3NDJjL2Rhc2gvY2xpcC9maWxlLm1wZCZidWNrZXQ9dmlkZW8ud2l4c3RhdGljLmNvbQ==&secure_sig=d1d3c02d6795fc05ccf9712d4b4d5a5320e910f8',
+        type: 'DASH'
+      }
     ],
-    overlay: false,
+    overlay: true,
     screen: {
       indicateScreenClick: true
     }
