Initial implementation of IoC container

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
   </div>
 </div>
 <script>
-  var player = new VideoPlayer.Player({
+  var player = VideoPlayer.create({
     autoplay: false,
     muted: false,
     loop: false,
