--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,13 @@
       height: 428
     },
     loadingCover: 'https://i.imgflip.com/1rjoyq.jpg',
+    controls: {
+      watchOnSite: {
+        url: 'http://www.wix.com/',
+        showAlways: true,
+        logo: 'https://www.file-extensions.org/imgs/app-icon/128/10395/wix-icon.png'
+      }
+    },
     src: [
       'https://video-dev.github.io/streams/x36xhzz/x36xhzz.m3u8',
     ],
