Changes in structure of default UI; Added ability to show top and bottom shadowns by events

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      flex-direction: column;
+    }
+    #player, #player2, #player3 {
+      margin: 10px;
+      position: relative;
     }
   </style>
   <script src="./video-player.bundle.min.js"></script>
@@ -25,6 +30,12 @@
   <div id="player">
 
   </div>
+  <div id="player2">
+
+  </div>
+  <div id="player3">
+
+  </div>
 </div>
 <script>
   var player = VideoPlayer.create({
@@ -33,12 +44,15 @@
     loop: false,
     logger: true,
     preload: "auto",
-    volume: 1,
+    volume: 0.5,
     size: {
-      width: 400,
-      height: 428
+      width: 700,
+      height: 300
     },
     loadingCover: 'https://i.imgflip.com/1rjoyq.jpg',
+    src: [
+      'https://video-dev.github.io/streams/x36xhzz/x36xhzz.m3u8',
+    ],
     controls: {
       watchOnSite: {
         url: 'http://www.wix.com/',
@@ -46,12 +60,59 @@
         logo: 'https://www.file-extensions.org/imgs/app-icon/128/10395/wix-icon.png'
       }
     },
+    overlay: false,
+  });
+
+  var player2 = VideoPlayer.create({
+    autoPlay: true,
+    muted: false,
+    loop: false,
+    logger: true,
+    preload: "auto",
+    volume: 0.5,
+    size: {
+      width: 700,
+      height: 300
+    },
+    loadingCover: 'https://i.imgflip.com/1rjoyq.jpg',
     src: [
       'https://video-dev.github.io/streams/x36xhzz/x36xhzz.m3u8',
     ],
+    controls: {
+      watchOnSite: {
+        url: 'http://www.wix.com/',
+        showAlways: false,
+        logo: 'https://www.file-extensions.org/imgs/app-icon/128/10395/wix-icon.png'
+      }
+    },
+    overlay: false,
+  });
+
+  var player3 = VideoPlayer.create({
+    autoPlay: true,
+    muted: false,
+    loop: false,
+    logger: true,
+    preload: "auto",
+    volume: 0.5,
+    size: {
+      width: 700,
+      height: 300
+    },
+    loadingCover: 'https://i.imgflip.com/1rjoyq.jpg',
+    src: [
+      'https://video-dev.github.io/streams/x36xhzz/x36xhzz.m3u8',
+    ],
+    controls: {
+      watchOnSite: {
+        url: 'http://www.wix.com/'
+      }
+    },
     overlay: false,
   });
   document.getElementById('player').appendChild(player.node);
+  document.getElementById('player2').appendChild(player2.node);
+  document.getElementById('player3').appendChild(player3.node);
 </script>
 </body>
 </html>
