--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
   const searchQuery = parseQuery(window.location.search);
   const url = searchQuery.url ||  'https://video-dev.github.io/streams/x36xhzz/x36xhzz.m3u8';
   const type = searchQuery.type || 'HLS';
-  
+
   window.player = VideoPlayer.create({
     autoPlay: false,
     muted: false,
@@ -74,7 +74,7 @@
   }, false);
 
   document.addEventListener('DOMContentLoaded', function() {
-    window.player.attachToElement(document.getElementById('player'));
+    window.player.attachToElement(document.body);
   });
 </script>
 </body>
