--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <script>
-  var DEFAULT_URL = 'https://video-dev.github.io/streams/x36xhzz/x36xhzz.m3u8';
+  var DEFAULT_URL = 'https://dash.akamaized.net/akamai/bbb_30fps/bbb_30fps.mpd';
 
   function parseQuery(qstr) {
     var query = {};
