Fix for calc + transition in IE; Adding ability to deploy bundle to gh-pages

--- a/video-player-cards/src/index.html
+++ b/video-player-cards/src/index.html
@@ -22,7 +22,7 @@
       overflow: hidden;
     }
   </style>
-  <script src="<%= staticsBaseUrl %>demo.bundle.js"></script>
+  <script src="./demo.bundle.min.js"></script>
 </head>
 <body>
 <div id="content">
