--- a/subtitles/index.html
+++ b/subtitles/index.html
@@ -41,5 +41,5 @@
   <button data-type="DASH">DASH</button>
   <button data-type="MP4">MP4</button>
 </div>
-<script type="text/javascript" src="/playable/subtitles/playable.bundle.min.js"></script></body>
+<script type="text/javascript" src="/playable/subtitles/playable.bundle.js"></script></body>
 </html>
