--- a/subtitles/index.html
+++ b/subtitles/index.html
@@ -27,19 +27,7 @@
   </style>
 </head>
 <body>
-<div id="theme-switcher">
-  <h3>Switch progress bar color: </h3>
-  <button data-color="#FFF">white</button>
-  <button data-color="#F00">red</button>
-  <button data-color="#0F0">green</button>
-  <button data-color="#00F">blue</button>
-</div>
 <div id="player-wrapper"></div>
-<div id="types">
-  <h3>Switch video format: </h3>
-  <button data-type="HLS">HLS</button>
-  <button data-type="DASH">DASH</button>
-  <button data-type="MP4">MP4</button>
-</div>
-<script type="text/javascript" src="/playable/subtitles/playable.bundle.js"></script></body>
+<script type="text/javascript" src="/playable/subtitles/playable.bundle.js"></script>
+</body>
 </html>
