--- a/demo/index.html
+++ b/demo/index.html
@@ -25,7 +25,7 @@
       align-items: center;
     }
   </style>
-  <script scr="./playable/demo/develop.bundle.min.js"></script>
+  <script src="./develop.bundle.min.js"></script>
 </head>
 <body>
 <div id="theme-switcher">
