feature(fill-empty-sides): add ability for filling empty size of player with parts from video

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
       align-items: center;
     }
   </style>
+  <script src="./develop.bundle.min.js"></script>
 </head>
 <body>
 <div id="theme-switcher">
@@ -40,6 +41,7 @@
   <button data-type="HLS">HLS</button>
   <button data-type="DASH">DASH</button>
   <button data-type="MP4">MP4</button>
+  <button data-type="MP4-VERTICAL">MP4 vertical</button>
 </div>
 </body>
 </html>
