--- a/demo/index.html
+++ b/demo/index.html
@@ -25,6 +25,7 @@
       align-items: center;
     }
   </style>
+  <script src="./develop.bundle.min.js"></script>
 </head>
 <body>
 <div id="theme-switcher">
