--- a/demo/index.html
+++ b/demo/index.html
@@ -36,6 +36,8 @@
   <button data-color="#00F">blue</button>
 </div>
 <div id="player-wrapper"></div>
+<input id="blur-range" type="range" min="0" max="100" value="0"/>
+<label for="blur-range" id="blur-value">0</label>
 <div id="types">
   <h3>Switch video format: </h3>
   <button data-type="HLS">HLS</button>
