--- a/src/index.html
+++ b/src/index.html
@@ -42,5 +42,10 @@
   <button data-type="MP4">MP4</button>
   <button data-type="MP4-VERTICAL">MP4 vertical</button>
 </div>
+<div id="progress-bar-modes">
+  <h3>Switch progress bar mode:</h3>
+  <button data-mode="REGULAR">REGULAR</button>
+  <button data-mode="PREVIEW">PREVIEW</button>
+</div>
 </body>
 </html>
