feat(modules/ui): Add RTL support
https://jira.wixpress.com/browse/VOD-4857

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
   <button data-type="HLS">HLS</button>
   <button data-type="DASH">DASH</button>
   <button data-type="MP4">MP4</button>
+  <button data-type="LIVE">LIVE</button>
   <button data-type="MP4-VERTICAL">MP4 vertical</button>
 </div>
 <div id="progress-bar-modes">
@@ -47,5 +48,10 @@
   <button data-mode="REGULAR">REGULAR</button>
   <button data-mode="PREVIEW">PREVIEW</button>
 </div>
+
+<h3>Direction:</h3>
+<label>LTR<input type="radio" name="direction" value="ltr" checked></label>
+<label>RTL<input type="radio" name="direction" value="rtl"></label>
+
 </body>
 </html>
