feat: setup visual tests

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
   <button data-type="MP4">MP4</button>
   <button data-type="LIVE">LIVE</button>
   <button data-type="MP4-VERTICAL">MP4 vertical</button>
+  <button data-type="WEBM">WEBM</button>
 </div>
 <div id="progress-bar-modes">
   <h3>Switch progress bar mode:</h3>
