feat(Playable): show/hideTopBlockContent, show/hideBottomBlockContent

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,14 @@
   <button data-type="LIVE">LIVE</button>
   <button data-type="MP4-VERTICAL">MP4 vertical</button>
 </div>
+<div id="showhidecontent">
+  <button data-action="showTopBlockContent">showTopBlockContent()</button>
+  <button data-action="hideTopBlockContent">hideTopBlockContent()</button>
+  <button data-action="showBottomBlockContent">showBottomBlockContent()</button>
+  <button data-action="hideBottomBlockContent">hideBottomBlockContent()</button>
+  <button data-action="showMainUI">showMainUI()</button>
+  <button data-action="hideMainUI">hideMainUI()</button>
+</div>
 <div id="progress-bar-modes">
   <h3>Switch progress bar mode:</h3>
   <button data-mode="REGULAR">REGULAR</button>
